asteria/core/tests/errors/elaboration_errors/too_many_arguments_in_constructor_pattern.asteriacore
data Id (a : Type) where
   | MkId (x : a) : Test$Id(a)
   ;;

x : forall {a : Type}. Test$Id(a) -> a
  = \{a} -> \i ->
      case i of
         | MkId(;y,z) -> y;;
